--- a/index.html
+++ b/index.html
@@ -259,6 +259,24 @@
         </div>
       </div>
     </div>
+    <div class="site-section pb-0">
+      <div class="container">
+        <div class="row align-items-stretch">
+          <div class="col-md-8 ml-auto">
+            <div class="sticky-content">
+              <h2>Project 8: <b>Student example</b></h2>
+              <div class="mb-5">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Et harum quidem rerum facilis est et expedita distinctio</p>
+                <p>Java, using JSON</p>
+                <p><a href="https://github.com/MihaelaO6/JavaTask" class="btn btn-primary my-btn">Visit project</a></p>   </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <a  href="https://github.com/MihaelaO6/JavaTask"><img src="bg.jpg" alt="Image" class="img-fluid rounded"></a>
+          </div>
+        </div>
+      </div>
+    </div>
     <nav class="nav justify-content-center" aria-label="Navigation">
       <ul class="pagination">
         <li class="page-item"><a class="page-link" href="#"><<</a></li>
