--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       border: black;
     }
     .container1{
-      width: 1000px;
+      width: auto;
       margin-left: 20%;
       margin-top: 15px;
       margin-bottom: 40px;
@@ -42,17 +42,20 @@
    .mytext{
      text-align: center;
      margin-top: 60px;
-     font-size: 60px;
+     font-size: 40px;
      font-family: "Source Code Pro Light";
    }
    .logo{
      background-image: url("mihaela1.png");
    }
+   .navv{
+     width: 100%;
+   }
   </style>
 </head>
 <body>
 <main id="main">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark navv">
     <a class="navbar-brand logo" href="#">MyLogo</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
