--- a/index.html
+++ b/index.html
@@ -196,16 +196,7 @@
                 student interested in computer science. Looking for an adventure
                 to upgrade my skills and knowledge. I enjoy hearing new things
                 and meeting new people. I have experience in JavaScript, HTML
-                and CSS, Bootstrap5, Flutter, Java. Lorem ipsum dolor sit amet,
-                consectetur adipiscing elit,sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua. Et harum quidem rerum facilis est
-                et expedita distinctio. Lorem ipsum dolor sit amet, consectetur
-                adipiscing elit,sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Et harum quidem rerum facilis est et
-                expedita distinctio. Lorem ipsum dolor sit amet, consectetur
-                adipiscing elit,sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Et harum quidem rerum facilis est et
-                expedita distinctio.
+                and CSS, Bootstrap5, Flutter, Java and Raect.
               </p>
             </div>
           </div>
