--- a/index.html
+++ b/index.html
@@ -510,6 +510,30 @@
             </div>
           </div>
         </div>
+         <div class="site-section pb-0">
+          <div class="container">
+            <div class="row align-items-stretch">
+              <h1>My experience:</h1>
+              <div class="col-md-11 ml-auto">
+                <div class="sticky-content">
+                  <h2>Internship in Altius Solutions </h2>
+                  <div class="mb-5">
+                    <p>
+                      3 months, front-end internship
+                    </p>
+                    <p>
+                      JavaScript, React, Shopify
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+        </div>
         <nav class="nav justify-content-center" aria-label="Navigation">
           <ul class="pagination">
             <li class="page-item"><a class="page-link" href="#"><<</a></li>
